# pic2a4

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
