[package]
name = "pic2a4"
version = "0.1.0"
edition = "2021"
description = "Convert long image to A4-page PDF"
repository = "https://github.com/Jason5Lee/pic2a4"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { version = "0.5", features = ["embedded_images"] }
image = "0.24"
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
